--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -63,10 +63,12 @@
 
 .ast-comment {
     display: inline-flex;
-    flex-direction: column;
     padding: 2.250em 0 0 0;
     border-top: 1px solid #eaeaea;
     position: relative;
+    @media(max-width: $mx-col-sm) {
+        flex-direction: column;
+    }
 }
 
 .ast-reply-link {
